tests/errors/sem.named-index-overflow.dot-access.or
main :: () -> void {
    vec := [2]sint.{1, 2};
    vec.z;
};
